<resources>
    <string name="app_name">途咪</string>
    <string name="login_text">途咪智能地图登录</string>
    <string name="language_select">语言选择</string>
    <string name="sos_title">一键求救</string>
    <string name="sos_notice">遇到紧急事件长按“SOS”键3秒，即可呼救我们将及时赶往您的位置提供帮助</string>
    <string name="notice_title">通知</string>
    <string name="address">地址:</string>
    <string name="go_buy">购买</string>
    <string name="home_goods_introduce">商品介绍</string>
    <string name="home_see_all">查看全部</string>
    <string name="home_add_order_man">新增常用预订人</string>
    <string name="home_souvenir_color">颜色</string>
    <string name="home_souvenir_size">尺码</string>
    <string name="home_remain">库存</string>
    <string name="home_souvenir_count">购买数量</string>
    <string name="home_shopping_trolley">购物车</string>
    <string name="home_add_shopping_trolley">加入购物车</string>
    <string name="home_ensure_pay">立即支付</string>
    <string name="login_ensure">确认</string>
    <string name="login_register">注册</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_pwd_hint">获取验证码</string>
    <string name="login_cancel">取消登录</string>
    <string name="login_with_register">途咪智能地图注册</string>
    <string name="login_cancel1">取消</string>
    <string name="login_illegal_mobile">请输入正确的电话号码</string>
    <string name="main_speech_tour">旅游讲解</string>
    <string name="main_shop_tour">旅游购物</string>
    <string name="main_im_tour">旅游聊天</string>
    <string name="main_personnal_center">个人中心</string>
    <string name="main_message">消息通知</string>
    <string name="modify_ensure">确认</string>
    <string name="home_update_order">提交订单</string>
    <string name="home_pay_online">在线支付</string>
    <string name="home_remaining_pay_time">剩余支付时间:</string>
    <string name="order_fill_question">其他</string>
    <string name="guide_user_name_hint">用户名</string>
    <string name="guide_pwd_hint">密码</string>
    <string name="guide_code_hint">验证码</string>
    <string name="guide_phone_login">验证码登录</string>
    <string name="guide_account_login">团账号密码登录</string>
    <string name="company">"&#064;"2018成都智慧全域信息技术有限公司</string>
    <string name="back_home">返回首页</string>
    <string name="emergency_one">紧急联系人1</string>
    <string name="emergency_two">紧急联系人2</string>
    <string name="emergency_three">紧急联系人3</string>
    <string name="modify_new_pwd">新密码</string>
    <string name="modify_ensure_pwd">确认密码</string>
    <string name="get_code">获取验证码</string>
    <string name="page_preview">face attributes detect(video)</string>
    <string name="face_recognize_mode">face compare 1:n(video vs database)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="processing">processing</string>
    <string name="get_picture_failed">failed to get picture!</string>
    <string name="permission_denied">permission denied!</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>
    <string name="register">register</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="face_manage">face manage</string>
    <string name="batch_register">batch register</string>
    <string name="notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="registering_please_wait">registering,please wait</string>
    <string name="clear_faces">clear faces</string>
    <string name="no_face_need_to_delete">no face need to delete</string>
    <string name="notification">notification</string>
    <string name="confirm_delete">delete those %d images and face features?</string>
    <string name="ft_op_0">only detect 0 degree in video mode</string>
    <string name="ft_op_90">only detect 90 degree in video mode</string>
    <string name="ft_op_180">only detect 180 degree in video mode</string>
    <string name="ft_op_270">only detect 270 degree in video mode</string>
    <string name="ft_op_all">detect all degrees in video mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="recall">Recall</string>
    <string name="msg_conference_invite">Come to the conference</string>
    <string name="msg_recall_by_self">This message has been recalled by myself</string>
    <string name="msg_recall_by_user">This message has been recalled by %1$s</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search_contanier">Search："%s"</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="stop_record">Stop record</string>
    <string name="switch_camera">Switch camera</string>
    <string name="capture_image">Capture image</string>
    <string name="record_finish_toast">Recording finish, file saved in %s</string>
    <string name="location_prefix">[my location]</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="video_call">[Video call]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="dynamic_expression">[dynamic expression]</string>
    <string name="Group_chat">group chat</string>
    <string name="all_members">All members</string>
    <string name="were_mentioned">[someone @me]</string>
    <string name="gorup_not_found">can not find group</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="user_forbidden">User is forbidden by server</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="voice">Sounds</string>
    <string name="shake">Vibrate</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="push_settings">Message push settings</string>
    <string name="push_use_fcm">Message push use fcm</string>
    <string name="book_black">Black list</string>
    <string name="set_custom_appkey">Set custom App key</string>
    <string name="set_custom_server">Set custom servers</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Loading data</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="nickname_description">Once this nickname is set, it will be used in push notification (by default this is user ID ) when the receiver is using the iOS device.</string>
    <string name="group_chat">Group chat</string>
    <string name="chat_room">Channel</string>
    <string name="voice_and_video_conference">Voice and video conference</string>
    <string name="conference_invite_error">Did not get the meeting information, can not invite other people to join</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Debug</string>
    <string name="push_nick">nickname for Notification</string>
    <string name="call_option">Call Option</string>
    <string name="multi_device_management">Multi device management</string>
    <string name="Current_version">SDK version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="add_public_group_chat">Add public group</string>
    <string name="add_public_chat_room">Add public channel</string>
    <string name="group_not_found">Can not find this group</string>
    <string name="group_name">Group name</string>
    <string name="robot_chat">Robot chat</string>
</resources>