<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_page_txt_50"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="@dimen/home_page_txt_30" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/home_page_txt_18"
        android:layout_marginTop="@dimen/home_page_txt_50"
        android:background="@mipmap/ic_input_phone"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_phone_hint"
            android:maxLength="11"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/home_page_txt_14" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            android:text="@string/login_pwd_hint"
            android:textSize="@dimen/adaptive_14dp"
            android:textColor="@color/color1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/home_page_txt_18"
        android:layout_marginTop="@dimen/home_page_txt_20"
        android:background="@mipmap/ic_login_pwd_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_weight="1"
            android:background="@null"
            android:maxLines="1"
            android:hint="@string/login_pwd_hint"
            android:maxLength="6"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/home_page_txt_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/ll_ensure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_page_txt_50"
        android:background="@mipmap/ic_ensure"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:textColor="@color/withe"
            android:textSize="@dimen/home_page_txt_14"
            android:text="@string/login_ensure"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_register"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/home_page_txt_80">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/withe"
            android:textSize="@dimen/home_page_txt_14"
            android:text="@string/login_cancel1"/>
    </LinearLayout>
</LinearLayout>