<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_login_bg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_top_15"
    android:paddingRight="@dimen/margin_top_15"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_speech_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_speech_tour_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_speech_tour" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_page_txt_18"
            android:text="@string/main_speech_tour"
            android:textColor="@color/withe"
            android:textSize="@dimen/home_page_txt_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_shop_tour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_shop_tour_bg"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_shop_tour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_shop_tour"
                android:textColor="@color/withe"
                android:textSize="@dimen/home_page_txt_18" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_im_tour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_im_tour_bg"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_im_tour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_im_tour"
                android:textColor="@color/withe"
                android:textSize="@dimen/home_page_txt_18" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_main_message_bg"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_main_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_message"
                android:textColor="@color/withe"
                android:textSize="@dimen/home_page_txt_18" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_personnal_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_main_person_center_bg"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_main_person_center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_personnal_center"
                android:textColor="@color/withe"
                android:textSize="@dimen/home_page_txt_18" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="25dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_item_name"
        android:text="激活引擎"
        android:textSize="25dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_active"
        android:text="语言切换"
        android:textSize="25dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_change"
        android:text="地图"
        android:textSize="25dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_communication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_map"
        android:text="即时通讯"
        android:textSize="25dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>